# takin2

./: LICENSE  README.md  REPOSITORIES  documentation.html
core/: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSES.txt  LITERATURE.txt  README.md  res  takin-doc  takin.sh  tlibs
core/3rdparty_licenses/: .dir
core/cmake/: FindClipper.cmake  FindDl.cmake  FindJulia.cmake  FindQwt.cmake  FindRtMp.cmake
core/dialogs/: AboutDlg.cpp  AboutDlg.h  AtomsDlg.cpp  AtomsDlg.h  DWDlg.cpp  DWDlg.h  DeadAnglesDlg.cpp  DeadAnglesDlg.h  DynPlaneDlg.cpp  DynPlaneDlg.h  EllipseDlg.cpp  EllipseDlg.h  EllipseDlg3D.cpp  EllipseDlg3D.h  FavDlg.cpp  FavDlg.h  FilePreviewDlg.cpp  FilePreviewDlg.h  GotoDlg.cpp  GotoDlg.h  LogDlg.cpp  LogDlg.h  NetCacheDlg.cpp  NetCacheDlg.h  NeutronDlg.cpp  NeutronDlg.h  PowderDlg.cpp  PowderDlg.h  RealParamDlg.cpp  RealParamDlg.h  RecipParamDlg.cpp  RecipParamDlg.h  ScanMonDlg.cpp  ScanMonDlg.h  SettingsDlg.cpp  SettingsDlg.h  SpurionDlg.cpp  SpurionDlg.h  SrvDlg.cpp  SrvDlg.h  (+3 more)
core/doc/: basics.html  convo.html  documentation.txt  fit.html  index_help.html  reso-sqw-jl.html  reso-sqw-native.html  reso-sqw-py.html  reso-sqw.html  reso.html  setup.html  takin.html  takin.qhp  takin_info.txt  toc.html  tutorials.html
core/examples/sqw_grid/: convert_grid_ver1_to_2.cpp  grid.cpp  grid_ver1_tst.py  grid_ver2.cpp  grid_ver2.h  grid_ver2_tst.py
core/examples/sqw_jl/: sqw.jl
core/examples/sqw_module/: sqwmod.cpp  sqwmod.h
core/examples/sqw_py/: sqw_bragg.py  sqw_magnon.py  sqw_phonon.py
core/libs/: globals.cpp  globals.h  globals_qt.cpp  globals_qt.h  plotgl.cpp  plotgl.h  version.h
core/libs/formfactors/: formfact.cpp  formfact.h  formfact_impl.h
core/libs/qt/: qthelper.cpp  qthelper.h  qwthelper.cpp  qwthelper.h  recent.h
core/libs/spacegroups/: crystalsys.cpp  crystalsys.h  latticehelper.h  sghelper.h  spacegroup.cpp  spacegroup.h  spacegroup_clp.cpp  spacegroup_clp.h  spacegroup_impl.h  xtl_xml.h
core/libs/xtal/: globals.cpp  globals.h  libxtl.cpp  libxtl.h  xtl_xml.h
core/setup/: clean.sh  get_3rdparty_licenses.sh  prebuild.sh  setup_externals.sh
core/setup_lin/: buildenv_arch.sh  buildenv_focal.sh  buildenv_jammy.sh  cp_takin.sh  mkdeb_bionic.sh  mkdeb_deb10.sh  mkdeb_focal.sh  mkdeb_jammy.sh  takin.desktop
core/setup_mac/: Entitlements.plist  Info.plist  InfoBundle.plist  InfoModPy.plist  buildenv_brew.sh  clean_py.sh  cp_app.sh  cp_dmg.sh  find_dependency.sh  find_local_bindings.sh  fix_names.sh  mk_icon.sh  use_syspy.sh
core/setup_mingw/: buildenv.sh  cp_mingw_takin.sh
core/tools/cli/: cli_main.cpp
core/tools/convofit/: convofit.cpp  convofit.h  convofit_cli.cpp  convofit_cli.h  convofit_cli_main.cpp  convofit_import.cpp  convofit_import.h  model.cpp  model.h  scan.cpp  scan.h  scanseries.cpp
core/tools/ffact/: FormfactorDlg.cpp  FormfactorDlg.h
core/tools/gentab/: gentab.cpp  gentab_clp.cpp  gentab_web.cpp
core/tools/mini_scanmon/: dialog.cpp  dialog.h  dialog_indirect.cpp  mini_scanmon.cpp
core/tools/misc/: addscans.cpp  domains.cpp  export.cpp  hopfgen.cpp  loc.gpl  nxsprint.py  polextract.cpp  polfit.cpp  printscans.cpp  sfact.cpp  sggen.cpp  tof.cpp  tst_sfact.jl
core/tools/monteconvo/: ConvoDlg.cpp  ConvoDlg.h  ConvoDlg_file.cpp  ConvoDlg_fit.cpp  ConvoDlg_sim.cpp  SqwParamDlg.cpp  SqwParamDlg.h  TASReso.cpp  TASReso.h  monteconvo_cli.cpp  monteconvo_cli.h  monteconvo_common.cpp  monteconvo_common.h  sqw.cpp  sqw.h  sqw_jl.cpp  sqw_jl.h  sqw_proc.h  sqw_proc_impl.h  sqw_py.cpp  sqw_py.h  sqw_uniform_grid.cpp  sqw_uniform_grid.h  sqwbase.cpp  sqwbase.h  sqwfactory.cpp  sqwfactory.h  sqwnull.h  sqwrawdelegate.h  xmconv_main.cpp
core/tools/montereso/: res.cpp  res.h  res_main.cpp
core/tools/posextract/: posextract.cpp
core/tools/powderfit/: PowderFitDlg.cpp  PowderFitDlg.h
core/tools/res/: ResoDlg.cpp  ResoDlg.h  ResoDlg_file.cpp  cn.cpp  cn.h  defs.h  eck.cpp  eck.h  ellipse.h  helper.h  mc.h  pop.cpp  pop.h  pop_cn.cpp  refl_curve.cpp  refl_curve.h  res_main.cpp  simple.cpp  simple.h  vio.cpp  vio.h  viol.cpp  viol.h
core/tools/res_py/: eck.py  helpers.py  pop.py  (+2 more)
core/ui/: about.ui  connection.ui  deadangles.ui  formfactors.ui  monteconvo.ui  neutrons.ui  reso.ui  scanpos.ui  scanviewer.ui  settings.ui  sglist.ui  sqwparams.ui
mag-core/: .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  INSTALL  LICENSE  LICENSES  LITERATURE  README.md  tlibs2
mag-core/install_scripts/: install_mingw.sh
mag-core/setup/: env.sh  setup_externals.sh
mag-core/setup_lin/: buildenv_focal.sh
mag-core/setup_mac/: InfoBZ.plist  InfoCif2Xml.plist  InfoFindSG.plist  InfoMagDyn.plist  InfoMagStructFact.plist  InfoPol.plist  InfoStructFact.plist
mag-core/setup_mingw/: install_mingw.sh
magnon-plugin/: .gitignore  CMakeLists.txt  README.md
magnon-plugin/ext/: setup_externals.sh
magnon-plugin/src/: magnonmod.cpp  magnonmod.h
tlibs/script/: CMakeLists.txt  COPYING.GPLv3  themakefile
tlibs2/: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSE  LICENSE.txt  LICENSES  LITERATURE  README.md  REPOSITORIES
tlibs2/build_scripts/: Info.plist  build_dmg.sh
tlibs2/cmake/: FindLapacke.cmake  FindMinuit2.cmake  FindQCP.cmake  FindQhull.cmake
tlibs2/jl_mod/: jl.cpp  jl.h  tl2.jl
tlibs2/libs/: algos.h  bits.h  cam.h  expr.h  file.h  fit.h  glplot.cpp  glplot.h  h5file.h  helper.h  instr.h  log.cpp  log.h  magdyn.h  magsg.h  math17.h  math20.h  mathlib.c  mathlib.h  maths.h  phys.h  str.h  traits.h  units.h  ver.h
tlibs2/script/: CMakeLists.txt
tlibs2/swig_mod/: tl2.i
tlibs2/tests/: CMakeLists.txt  cov.cpp  cryst.cpp  detshape.cpp  eig.cpp  eig17.cpp  expr.cpp  fit0.cpp  fit1.cpp  h5file.cpp  hull1.cpp  leastsq.cpp  log.cpp  magsg.cpp  mat0.cpp  mat1.cpp  mathlib.c  min0.cpp  min1.cpp  ode.cpp  peaks.cpp  quat1.cpp  sort.cpp  stat1.cpp  units.cpp
tlibs2/unittests/: CMakeLists.txt  chol.cpp  chol2.cpp  cov.cpp  cryst.cpp  eig.cpp  expr.cpp  fft.cpp  fit0.cpp  fit1.cpp  hull1.cpp  leastsq.cpp  mat0.cpp  mat1.cpp  mat2.cpp  min0.cpp  ode.cpp  quat1.cpp  rotation.cpp  stat1.cpp  units.cpp
(+625 files in other folders)
